Miniplayer bug fixes, add media controls to taskbar